# Compile and build the InSAR project.
CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

if(COMMAND cmake_policy)
       cmake_policy(SET CMP0003 NEW)
#        cmake_policy(SET CMP0015 NEW)
endif(COMMAND cmake_policy)
     
     
PROJECT(InSAR)

#-----------------------------------------------------------------------------
# OTB option to access large file (> 4Go).
# ADD_DEFINITIONS(
# 	-D_LARGEFILE_SOURCE
# 	-D_FILE_OFFSET_BITS=64
# 	-D_LARGEFILE64_SOURCE
# 	-D_LARGE_FILES
# 	)

#-------------------------------
# Librairie OTB
#-------------------------------
FIND_PACKAGE(OTB)
IF(OTB_FOUND)
  INCLUDE(${OTB_USE_FILE})
ELSE(OTB_FOUND)
  MESSAGE(FATAL_ERROR
          "Cannot build InSAR without OTB.  Please set OTB_DIR.")
ENDIF(OTB_FOUND)

INCLUDE_DIRECTORIES (
  ${CMAKE_CURRENT_BINARY_DIR} 
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/Code
  ${CMAKE_CURRENT_SOURCE_DIR}/Code/Interpolation
  ${CMAKE_CURRENT_BINARY_DIR}/Code
)


# Find the data directory
# SET(OTB_SR_DIR /home2/arnaud/PROJETS/SimuCapteur/data/BD-CNES)
# SET(OTB_SATRSR_DIR /home2/arnaud/PROJETS/SimuCapteur/hg/SimuPerformances/Data/Rsr)
# FIND_PATH(OTB_SPECTRAL_RESPONSE otbSR.readme ${OTB_SR_DIR} $ENV{OTB_SPECTRAL_RESPONSE})
# FIND_PATH(OTB_SAT_RSR otbSATRSR.readme ${OTB_SATRSR_DIR} $ENV{OTB_SAT_RSR})

SET(InSAR_DATA ${InSAR_SOURCE_DIR}/Data)
SET(BASELINE_FILES ${InSAR_DATA}/Baseline)
SET(INPUTDATA ${InSAR_DATA}/Input)


# Output directories.
SET (LIBRARY_OUTPUT_PATH ${InSAR_BINARY_DIR}/bin CACHE INTERNAL "Single output directory for building all libraries.")
SET (EXECUTABLE_OUTPUT_PATH ${InSAR_BINARY_DIR}/bin CACHE INTERNAL "Single output directory for building all executables.")
MARK_AS_ADVANCED(LIBRARY_OUTPUT_PATH EXECUTABLE_OUTPUT_PATH)
SET(InSAR_LIBRARY_PATH "${LIBRARY_OUTPUT_PATH}")
SET(InSAR_EXECUTABLE_PATH "${EXECUTABLE_OUTPUT_PATH}")
SET (InSARTesting_BINARY_DIR ${InSAR_BINARY_DIR}/Testing)
SET(TEMP ${InSARTesting_BINARY_DIR}/Temporary)

INCLUDE_DIRECTORIES( ${InSAR_LIBRARY_PATH} )

# Put "." in the rpath of all InSAR exe.
LINK_DIRECTORIES(.)

# IF(WIN32)
#    IF(BUILD_SHARED_LIBS)
#      SET(InSAR_COMMON_BUILD_TYPE "SHARED")
#    ELSE(BUILD_SHARED_LIBS)
#      SET(InSAR_COMMON_BUILD_TYPE "STATIC")
#    ENDIF(BUILD_SHARED_LIBS)
#    SET(BUILD_SHARED_LIBS OFF)
# ENDIF(WIN32)

SET(InSAR_INSTALL_LIB_DIR "${CMAKE_INSTALL_PREFIX}/lib/InSAR")
SET(InSAR_INSTALL_BIN_DIR "${CMAKE_INSTALL_PREFIX}/bin")
SET(InSAR_INSTALL_INCLUDE_DIR "${CMAKE_INSTALL_PREFIX}/include/InSAR")

OPTION(BUILD_TESTING  "Build testing." OFF)
IF (BUILD_TESTING)
  ADD_SUBDIRECTORY(Testing)
ENDIF (BUILD_TESTING)

OPTION(BUILD_EXAMPLES "Build the Examples directory." OFF)
IF (BUILD_EXAMPLES)
  ADD_SUBDIRECTORY(Examples)
ENDIF (BUILD_EXAMPLES)

OPTION(GENERATE_DOCUMENTATION "Generate the LateX documentation." OFF)
IF(GENERATE_DOCUMENTATION)
  INCLUDE(UseLATEX.cmake)
  SUBDIRS(Documents)
ENDIF(GENERATE_DOCUMENTATION)

SUBDIRS(Code)




