PROJECT(InSARTesting)

SET(CXX_TEST_PATH ${EXECUTABLE_OUTPUT_PATH})
IF(BUILD_TESTING)
    ENABLE_TESTING()
ENDIF(BUILD_TESTING)


SUBDIRS (Interpolation)
SUBDIRS (Baseline)
SUBDIRS (BasicFilter)

  
IF(GENERATE_MONTEVERDI_APPLICATION)
    ADD_SUBDIRECTORY(Monteverdi)
ENDIF(GENERATE_MONTEVERDI_APPLICATION)
