
ADD_EXECUTABLE(BasicInterferogramComputation BasicInterferogramComputation.cxx)
TARGET_LINK_LIBRARIES(BasicInterferogramComputation OTBCommon OTBIO)

ADD_EXECUTABLE(JustTheInterferogramComputation JustTheInterferogramComputation.cxx)
TARGET_LINK_LIBRARIES(JustTheInterferogramComputation OTBCommon OTBIO)

ADD_EXECUTABLE(JustFlatEarthRemovalInterferogramComputation JustFlatEarthRemovalInterferogramComputation.cxx)
TARGET_LINK_LIBRARIES(JustFlatEarthRemovalInterferogramComputation OTBCommon OTBIO)

#ADD_EXECUTABLE(SARCoregistrationComputation SARCoregistrationComputation.cxx)
#TARGET_LINK_LIBRARIES(SARCoregistrationComputation OTBCommon OTBIO)

ADD_EXECUTABLE(SensorModelRegistration SensorModelRegistration.cxx)
TARGET_LINK_LIBRARIES(SensorModelRegistration OTBCommon OTBIO Interpolation)

ADD_EXECUTABLE(ComplexCoarseRegistrationComputation ComplexCoarseRegistrationComputation.cxx)
TARGET_LINK_LIBRARIES(ComplexCoarseRegistrationComputation OTBCommon OTBIO Interpolation)

ADD_EXECUTABLE(FFTConvolutionTest FFTConvolutionTest.cxx)
TARGET_LINK_LIBRARIES(FFTConvolutionTest OTBCommon OTBIO Interpolation)

