FILE(GLOB OTBInSARMonteverdiCommon_SRCS "*.cxx" )

SET(OTBInSARMonteverdiCommon_SRCS ${OTBInSARMonteverdiCommon_SRCS})

ADD_LIBRARY(OTBInSARMonteverdiCommon ${OTBInSARMonteverdiCommon_SRCS} )
TARGET_LINK_LIBRARIES(OTBInSARMonteverdiCommon OTBIO OTBCommon OTBGui OTBVisualization flu)


#IF(NOT InSARMonteverdi_INSTALL_NO_LIBRARIES)
#  INSTALL(TARGETS OTBInSARMonteverdiCommon
#    RUNTIME DESTINATION ${InSARMonteverdi_INSTALL_BIN_DIR_CM24} COMPONENT RuntimeLibraries
#    LIBRARY DESTINATION ${InSARMonteverdi_INSTALL_LIB_DIR_CM24} COMPONENT RuntimeLibraries
#    ARCHIVE DESTINATION ${InSARMonteverdi_INSTALL_LIB_DIR_CM24} COMPONENT Development)
#ENDIF(NOT InSARMonteverdi_INSTALL_NO_LIBRARIES)
